# rectangle-device

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  bug-zone.sh  build.rs  notes.md  rustfmt.toml
blocks/: Cargo.toml  README.md  build.rs
blocks/src/: core.rs  dir.rs  lib.rs  package.rs  raw.rs
blocks/src/unixfs/: mod.rs
docker/: install-build-deps.sh  storage.conf
docker/install/: build-deps.sh  gvisor.sh  nodejs-current.x  podman.sh  yarn.sh
docker/nested-podman/: containers.conf  crun-context-no-new-keyring.patch  podman-always-rootless.patch  podman-no-namespace-clone.patch  podman-no-newns.patch
docker/podman/: containers.conf  registries.conf  storage.conf
docker/skeleton/: Cargo.toml
docker/skeleton/player/: build.rs
docker/skeleton/src/: main.rs
media/: Cargo.toml  README.md
media/src/: hls.rs  html.rs  ingest.rs  lib.rs
network/: Cargo.toml  README.md
network/src/: keypair.rs  lib.rs  p2p.rs  pinner.rs  warmer.rs
network/src/p2p/: behaviour.rs  config.rs  mod.rs  node.rs  peers.rs  storage.rs
player/: Cargo.toml  README.md  build.rs  notes.md  package.json  webpack.config.js
player/src/: index.js  lib.rs
player/templates/: index.html
sandbox/: Cargo.toml
sandbox/src/: ffmpeg.rs  lib.rs  runtime.rs  socket.rs  types.rs
src/: blocks.rs  cli.yml  config.rs  container.rs  ingest.rs  lib.rs  main.rs  network.rs  pinner.rs  warmer.rs
src/blocks/: dag.rs  mod.rs  unixfs.rs
src/container/: hls.rs  html.rs  media.rs  mod.rs
src/ingest/: mod.rs
src/media/: hls.rs  html.rs  mod.rs
src/network/: keypair.rs  mod.rs  p2p.rs  pinner.rs  warmer.rs
src/sandbox/: ffmpeg.rs  runtime.rs  socket.rs  types.rs
