[package]
name = "rectangle-device"
version = "0.1.0"
authors = ["Micah Elizabeth Scott <micah@scanlime.org>"]
edition = "2018"

[dependencies]
async-std = { version = "1.6.0", features = ["unstable"] }
env_logger = "0.7.1"
clap = "2.33.3"
file_limit = "0.0.2"
futures = "0.3.1"
libipld = "0.4.0"
libp2p = "0.28.1"
libp2p-bitswap = "0.7.0"
log = "0.4.11"
m3u8-rs = "1.0"
mpeg2ts = "0.1.1"
reqwest = { version = "0.10.8", features = ["json"] }
serde = "1.0.116"
thiserror = "1.0"
tokio = "0.2.22"

rectangle-device-player = { version = "0.1.0", path = "player" }
rectangle-device-sandbox = { version = "0.1.0", path = "sandbox" }
rectangle-device-blocks = { version = "0.1.0", path = "blocks" }

[workspace]
members = [ "player", "sandbox", "blocks" ]
