[package]
name = "rectangle-device"
version = "0.1.0"
authors = ["Micah Elizabeth Scott <micah@scanlime.org>"]
edition = "2018"

[dependencies]
env_logger = "0.7.1"
file_limit = "0.0.2"
log = "0.4.11"
clap = "2.33.3"
async-std = { version = "1.6.0", features = ["unstable"] }

rectangle-device-network = { version = "0.1.0", path = "network" }
rectangle-device-media = { version = "0.1.0", path = "media" }

[workspace]
members = [ "player", "sandbox", "blocks", "network", "media" ]
