[package]
name = "rectangle-device-blocks"
version = "0.1.1"
authors = ["Micah Elizabeth Scott <micah@scanlime.org>"]
edition = "2018"
description = "IPFS block formatting for an experimental decentralizable live video server"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/scanlime/rectangle-device"

[dependencies]
async-std = { version = "1.6.0", features = ["unstable"] }
log = "0.4.11"
libipld = "0.4.0"
leb128 = "0.2.4"
prost = "0.6.1"

[build-dependencies]
prost-build = "0.6.1"
