[package]
name = "rectangle-device-media"
version = "0.1.0"
authors = ["Micah Elizabeth Scott <micah@scanlime.org>"]
edition = "2018"

[dependencies]
log = "0.4.11"
async-std = { version = "1.6.0", features = ["unstable"] }
m3u8-rs = "1.0"
mpeg2ts = "0.1.1"
rand = "0.7.3"
thiserror = "1.0"

rectangle-device-player = { version = "0.1.0", path = "../player" }
rectangle-device-sandbox = { version = "0.1.0", path = "../sandbox" }
rectangle-device-blocks = { version = "0.1.0", path = "../blocks" }
