[package]
name = "rectangle-device-media"
version = "0.1.1"
authors = ["Micah Elizabeth Scott <micah@scanlime.org>"]
edition = "2018"
description = "Media format support for an experimental decentralizable live video server"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/scanlime/rectangle-device"

[dependencies]
log = "0.4.11"
async-std = { version = "1.6.0", features = ["unstable"] }
m3u8-rs = "1.0"
mpeg2ts = "0.1.1"
rand = "0.7.3"
thiserror = "1.0"

rectangle-device-player = { version = "0.1.1", path = "../player" }
rectangle-device-sandbox = { version = "0.1.1", path = "../sandbox" }
rectangle-device-blocks = { version = "0.1.1", path = "../blocks" }
