[package]
name = "rectangle-device-player"
version = "0.1.0"
authors = ["Micah Elizabeth Scott <micah@scanlime.org>"]
edition = "2018"
description = "Player client for an experimental decentralizable live video server"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/scanlime/rectangle-device"

[dependencies]
askama = "0.10.3"

[build-dependencies]
build-deps = "0.1.4"
