[package]
name = "skeleton"
version = "0.1.0"
edition = "2018"

[dependencies]
askama = "0.10.3"
async-process = "1.0.0"
async-std = { version = "1.6.0", features = ["unstable"] }
async-trait = "0.1.40"
build-deps = "0.1.4"
env_logger = "0.7.1"
file_limit = "0.0.2"
futures = "0.3.1"
lazy_static = "1.4.0"
leb128 = "0.2.4"
libipld = "0.4.0"
libp2p = "0.28.1"
libp2p-bitswap = "0.7.0"
log = "0.4.11"
m3u8-rs = "1.0"
mpeg2ts = "0.1.1"
prost = "0.6.1"
prost-build = "0.6.1"
regex = "1.3.9"
reqwest = { version = "0.10.8", features = ["json"] }
serde = "1.0.116"
tempfile = "3.1.0"
thiserror = "1.0"
tokio = "0.2.22"
